creada entidad web

--- a/src/assets/i18n/es.json
+++ b/src/assets/i18n/es.json
@@ -3,5 +3,5 @@
     "USUARIO": "Usuario",
     "PASS": "Contraseña",
     "SAVE_LOGIN": "Recordar inicio de sesión",
-    "INICIO": "Inicio2"
+    "INICIO": "Principal"
 }
